@@ -76,10 +76,10 @@ ERR 402 : no delivery status retrieved and SMS has been processed from queue
 There might appear new error codes in the future, you should be aware that new
 codes might appear with this syntax
 
-ERR 1xx: authentication or parameter erorrs
-ERR 2xx: specific pv errors
-ERR 3xx: specific bc errors
-ERR 4xx: delivery status errors
+ERR 1xx : authentication or parameter erorrs
+ERR 2xx : specific pv errors
+ERR 3xx : specific bc errors
+ERR 4xx : delivery status errors
 
 
 PROTOCOL
@@ -115,32 +115,40 @@ PROTOCOL
     notes	: c retrieves as many as c value
 		  last retrieves from last ID
 
-5.  User credits
+5.  Inbox SMS
+    ta		: ix
+    parameters	: u, h, src, dst, dt, c, last
+    returns	: CSV format:
+    		  "ID";"From";"To";"Message";"Date/Time"
+    notes	: c retrieves as many as c value
+    		  last retrieves from last ID
+
+6.  User credits
     ta		: cr
     parameters	: u, h
     returns	: user's credit
 
-6.  Get token
+7.  Get token
     ta		: get_token
     parameters	: u, p
     returns	: webservice token
 
-7.  Get SMS poll results
+8.  Get SMS poll results
     ta		: sms_poll
     parameters	: <please read in SMS poll menu>
     returns	: <please read in SMS poll menu>
 
-8.  Get SMS board results
+9.  Get SMS board results
     ta		: sms_board
     parameters	: <please read in SMS board menu>
     returns	: <please read in SMS board menu>
 
-9.  Get contact list by name, mobile or email
+10.  Get contact list by name, mobile or email
     ta		: get_contact
     parameters	: u, h, kwd, c
     returns	: list of contacts
 
-10. Get group contact list by name or code
+11. Get group contact list by name or code
     ta		: get_contact_group
     parameters	: u, h, kwd, c
     returns	: list of group contacts
